--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://Amash10.github.io/react-gh-pages",
+  "homepage": "https://amashansari.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.3",
