--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://amashansari.github.io/amash",
+  "homepage": "https://amashansari.github.io",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@motionone/utils": "^10.17.0",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.5",
     "gsap": "^3.12.5",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
@@ -20,7 +23,9 @@
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "simplex-noise": "^4.0.1",
     "styled-components": "^6.1.8",
+    "tailwind-merge": "^2.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
