--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "homepage": "https://amashansari.github.io/amash",
+  "aboutpage": "https://amashansari.github.io/amash/aboutWork",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.3",
